adding the lint step

--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Lint with pylint
       run: |
         #make lint
+        make lint
     - name: Test with nvtest
       run: |
         #make test
