adding the test

--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -21,7 +21,7 @@ jobs:
         make lint
     - name: Test with nvtest
       run: |
-        #make test
+        make test
     - name: Format code
       run: |
         #make format
